Fix scrollbar

--- a/app/styles/_report.scss
+++ b/app/styles/_report.scss
@@ -625,3 +625,19 @@ $badge-bad: #FF6D69;
     margin-top: 10px;
     clear: both;
 }
+
+.summary-view {
+    .l-detail-section {
+        overflow: hidden;
+    }
+    .content {
+        height: auto;
+        padding: 0;
+    }
+    .summary-list {
+        width: 100%;
+    }
+    .summary-wrapper {
+        padding: 20px 35px;
+    }
+}
